Solicitudes de creación de servicio al Admin
-Interacción, funciones y lógica entre Activities kt.
-Vistas xml.
-Drawables.
-Gradle.
-Manifest.
-Values: colors, strings.
-Corrección de errores y diseño.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="btn_perfil_home">Perfil</string>
     <string name="text1_home">Tu trabajo es recompensado</string>
     <string name="text2_home">Te ayudamos en lo que necesites 24/7</string>
-    <string name="text3_home">Si ofreces un servicio de calidad, nosotros te pondremos primero.</string>
+    <string name="text3_home">Te acercamos servicios de calidad, al alcance de tus manos.</string>
     <string name="text4_home">Garantizamos que tu necesidad sea cubierta con nuestros especialistas.</string>
 
     <!-- Strings Menú -->
