Adicion de resposividad a la vista ayuda y correcciones menores
se le agrego responsividad para dispositivos de mayor largo y se corrigieron ciertos errores menores.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -200,6 +200,7 @@
     <string name="precio">Precio</string>
     <string name="aceptar">Aceptar</string>
     <string name="rechazar">Rechazar</string>
+    <string name="especialistas">Especialistas</string>
 
     <!-- Strings Lista de Ciudades -->
     <string-array name="simple_items">
